# sparse-conv

./: .gitignore  README.md  pyproject.toml  setup.py
src/sparseconv/: __init__.py  core.py  utils.py
src/sparseconv/kernels/cuda/: ext.cpp
src/sparseconv/kernels/cuda/hash/: api.h  hash.cu  hash.cuh
src/sparseconv/kernels/cuda/neighbor_map/: api.h  neighbor_map.cu  neighbor_map.h
src/sparseconv/kernels/triton/: __init__.py  implicit_gemm.py
src/sparseconv/ops/: submanifold_conv3d.py  utils.py
tests/: test_core.py  test_submanifold_conv3d.py
