[project]
name = "sparseconv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
default = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = [
    "setuptools",
    "torch"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]